Ensure override also applies to dark mode - dark mode brings back in i think specific overrides by material design - ensure our overrides are more specific - flicking between light/dark mode now shows no difference

--- a/src/frontend/packages/core/sass/mat-desktop.scss
+++ b/src/frontend/packages/core/sass/mat-desktop.scss
@@ -122,7 +122,7 @@ $desktop-toggle-button-item-height: $desktop-menu-item-height - 2px;
       width: 20px;
     }
 
-    .page-header__notification-button .mat-badge-medium .mat-badge-content {
+    .page-header__notification-button .mat-badge-medium.mat-badge-overlap .mat-badge-content {
       height: 18px;
       line-height: 18px;
       right: -8px;
